fix(subject): grades (WIP)

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -9,6 +9,10 @@
       "yourGrades": "Your grades",
       "latestTasks": "Latest tasks",
       "latestHomework": "Latest homework"
+    },
+    "grades": {
+      "activity": "Activity",
+      "behaviour": "Behaviour"
     }
   },
   "task": {
