--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -21,6 +21,12 @@
         "proposed": "Manually selected by the teacher, proposed grade for this subject. It was selected based on the average assignment grade visible above as well as activity and behaviour grades.",
         "final": "Manually selected by the teacher, final grade for this subject. This grade is definitive and cannot be modified."
       }
+    },
+    "createNew": {
+      "notice": "Create new notice",
+      "grade": "Assign a grade",
+      "task": "Create new task",
+      "homework": "Create new homework"
     }
   },
   "task": {
