--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -7,6 +7,7 @@
     "general": {
       "latestNotices": "Latest notices",
       "yourGrades": "Your grades",
+      "assignedGrades": "Assigned grades",
       "latestTasks": "Latest tasks",
       "latestHomework": "Latest homework"
     },
