--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -72,6 +72,9 @@
     "goHome": "Take me home"
   },
   "error": {
-    "fileTooBig": "The file is too large. Max size allowed is {{ maxSize }}"
+    "UNKNOWN_ERROR": "Unknown error occurred.",
+    "FILE_TOO_BIG": "The file is too large. Max size allowed is {{ maxSize }}/",
+    "SESSION_EXPIRED": "You have been logged out.",
+    "EMAIL_TAKEN": "This e-mail is already in use."
   }
 }
