--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -1,13 +1,50 @@
 {
+  "auth": {
+    "signIn": "Zaloguj się",
+    "forgotPassword": "Nie pamiętasz hasła?",
+    "resetPassword": "Resetuj",
+    "tooltip": {
+      "fillDataToSignIn": "Uzupełnij brakujące dane aby się zalogować"
+    },
+    "placeholder": {
+      "email": "Adres e-mail",
+      "password": "Hasło"
+    }
+  },
   "nav": {
     "home": "Strona główna",
-    "subjects": "Przedmioty"
+    "subjects": "Przedmioty",
+    "settings": "Ustawienia",
+    "signOut": "Wyloguj się"
   },
   "subject": {
     "general": {
       "latestNotices": "Ostatnie ogłoszenia",
+      "yourGrades": "Twoje oceny",
+      "assignedGrades": "Przydzielone oceny",
       "latestTasks": "Ostatnie zadania",
       "latestHomework": "Ostatnie zadania domowe"
+    },
+    "grades": {
+      "title": "Oceny",
+      "activity": "Aktywność",
+      "average": "Średnia ocena",
+      "behaviour": "Zachowanie",
+      "proposed": "Proponowana ocena",
+      "final": "Ocena końcowa",
+      "tooltip": {
+        "average": "Ocena automatycznie obliczana na podstawie ocen za zadania. Nauczyciel może ją zmienić w zależności od ocen za zachowanie i aktywność.",
+        "proposed": "Ręcznie wybrana ocena przez nauczyciela jako proponowana ocena za przedmiot. Została wystawiona na podstawie wszystkich zdobytych ocen.",
+        "final": "Ręcznie wybrana ocena przez nauczyciela jako ocena końcowa. Jest to ostateczna decyzja, której nie można zmienić."
+      },
+      "assignmentGrades": "Zadania",
+      "nonAssignmentGrades": "Zachowanie i aktywność"
+    },
+    "createNew": {
+      "notice": "Utwórz nowy wpis",
+      "grade": "Wystaw ocenę",
+      "task": "Utwórz nowe zadanie",
+      "homework": "Utwórz nowe zadanie domowe"
     }
   },
   "task": {
@@ -19,7 +56,14 @@
       "GRADED": "Ocenione"
     },
     "submitSolution": "Prześlij rozwiązanie",
-    "taskMessagePlaceholder": "Napisz odpowiedź bądź opcjonalny komentarz..."
+    "taskMessagePlaceholder": "Napisz odpowiedź bądź opcjonalny komentarz...",
+    "pastDeadline": "czas minął",
+    "daysLeft": "dni",
+    "hoursLeft": "godziny",
+    "minutesLeft": "minut",
+    "tooltip": {
+      "cannotSubmitPastDeadline": "Nie można przesłać rozwiązania gdyż termin minął."
+    }
   },
   "notice": {
     "noticeBoard": "Tablica ogłoszeń"
@@ -32,9 +76,32 @@
     "noNotices": "Brak ogłoszeń.",
     "noTasks": "Brak zadań.",
     "noHomework": "Brak zadań domowych.",
+    "task": "Zadanie",
+    "homework": "Zadanie domowe",
+    "test": "Test",
+    "writtenBy": "Napisał(a) <1>{{ author }}</1>",
+    "publishedOn": "Opublikował(a) <1>{{ date }}</1>",
+    "welcome": "Witaj",
     "student": "Uczeń",
     "teacher": "Nauczyciel",
     "admin": "Administrator"
+  },
+  "settings": {
+    "title": "Ustawienia",
+    "tabs": {
+      "students": "Uczniowie",
+      "teachers": "Nauczyciele",
+      "create": "Dodaj użytkownika"
+    },
+    "createUser": {
+      "placeholder": {
+        "email": "Adres e-mail",
+        "firstName": "Imię",
+        "lastName": "Nazwisko"
+      },
+      "submitButton": "Utwórz użytkownika",
+      "userCreated": "Użytkownik pomyślnie utworzony"
+    }
   },
   "404": {
     "title": "404",
@@ -42,8 +109,16 @@
   },
   "error": {
     "UNKNOWN_ERROR": "Nieznany błąd.",
+    "INVALID_FORM": "Formularz zawiera błędy.",
     "FILE_TOO_BIG": "Zbyt duży plik. Maksymalny dopuszczalny rozmiar to {{ maxSize }}.",
     "SESSION_EXPIRED": "Sesja wygasła, zaloguj się ponownie.",
-    "EMAIL_TAKEN": "Ten adres e-mail istnieje już w bazie danych."
+    "EMAIL_TAKEN": "Ten adres e-mail istnieje już w bazie danych.",
+    "INCORRECT_EMAIL": "Niepoprawny format adresu email.",
+    "EMAIL_REQUIRED": "Adres e-mail jest wymagany.",
+    "PASSWORD_REQUIRED": "Pole hasło nie może być puste.",
+    "PASSWORD_TOO_SHORT": "Hasło jest zbyt krótkie.",
+    "PASSWORD_TOO_LONG": "Hasło jest zbyt długie.",
+    "FIRST_NAME_REQUIRED": "Nie można utworzyć użytkownika bez imienia.",
+    "ROLE_REQUIRED": "Rodzaj użytkownika musi zostać określony"
   }
 }
