--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -72,6 +72,7 @@
     "back": "Wróć",
     "viewMore": "Więcej",
     "submit": "Wyślij",
+    "confirm": "Potwierdź",
     "cancel": "Anuluj",
     "noNotices": "Brak ogłoszeń.",
     "noTasks": "Brak zadań.",
@@ -84,23 +85,54 @@
     "welcome": "Witaj",
     "student": "Uczeń",
     "teacher": "Nauczyciel",
-    "admin": "Administrator"
+    "admin": "Administrator",
+    "edit": "Edytuj",
+    "save": "Zapisz",
+    "delete": "Usuń"
   },
   "settings": {
     "title": "Ustawienia",
-    "tabs": {
-      "students": "Uczniowie",
-      "teachers": "Nauczyciele",
-      "create": "Dodaj użytkownika"
+    "categories": {
+      "subjectCategories": "Zarządzanie kategoriami przedmiotów",
+      "classrooms": "Zarządzanie klasami",
+      "subjects": "Zarządzanie przedmiotami",
+      "users": "Zarządzanie użytkownikami"
     },
-    "createUser": {
-      "placeholder": {
-        "email": "Adres e-mail",
-        "firstName": "Imię",
-        "lastName": "Nazwisko"
+    "subjectCategories": {
+      "title": "Zarządzanie kategoriami przedmiotów",
+      "addNew": "Dodaj nową kategorię",
+      "categoryNamePlaceholder": "Nazwa kategorii...",
+      "create": "Utwórz kategorię",
+      "nameCannotBeEmptyTooltip": "Aby utworzyć kategorię musisz nadać jej nazwę",
+      "nothingToSaveTooltip": "Brak zmian w nazwie kategorii",
+      "createSuccessToast": "Utworzono kategorię \"{{name}}\".",
+      "updateSuccessToast": "Nazwa kategorii \"{{oldName}}\" pomyślnie zmieniona na \"{{newName}}\".",
+      "deleteSuccessToast": "Usunięto kategorię \"{{name}}\".",
+      "confirmDeleteTitle": "Usuwanie kategorii przedmiotu",
+      "confirmDeleteMessage": "Czy na pewno usunąć kategorię \"{{name}}\"? Tej operacji nie da się cofnąć."
+    },
+    "classrooms": {
+      "title": "Zarządzanie klasami"
+    },
+    "subjects": {
+      "title": "Zarządzanie przedmiotami"
+    },
+    "users": {
+      "title": "Zarządzanie użytkownikami",
+      "tabs": {
+        "students": "Uczniowie",
+        "teachers": "Nauczyciele",
+        "create": "Dodaj użytkownika"
       },
-      "submitButton": "Utwórz użytkownika",
-      "userCreated": "Użytkownik pomyślnie utworzony"
+      "createUser": {
+        "placeholder": {
+          "email": "Adres e-mail",
+          "firstName": "Imię",
+          "lastName": "Nazwisko"
+        },
+        "submitButton": "Utwórz użytkownika",
+        "userCreated": "Użytkownik pomyślnie utworzony"
+      }
     }
   },
   "404": {
