improvement: add members of group to options

--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -163,7 +163,7 @@
     "FILE_TOO_BIG": "Zbyt duży plik. Maksymalny dopuszczalny rozmiar to {{ maxSize }}.",
     "SESSION_EXPIRED": "Sesja wygasła, zaloguj się ponownie.",
     "INCORRECT_EMAIL": "Niepoprawny format adresu email.",
-    "EMAIL_REQUIRED": "Adres e-mail jest wymagany.",
+    "EMAIL_REQUIRED": "Adres e-mail jest  .",
     "PASSWORD_REQUIRED": "Pole hasło nie może być puste.",
     "PASSWORD_TOO_SHORT": "Hasło jest zbyt krótkie.",
     "PASSWORD_TOO_LONG": "Hasło jest zbyt długie.",
